<resources>
    <string name="app_name">JustFriends</string>
    <string name="facebook_app_id">581486373407490</string>
    <string name="fb_login_protocol_scheme">fb581486373407490</string>
    <string name="kakao_native_app_key">106ad0cc7f0298007c10b2c1e3ada510</string>
    <string name="server_client_id">243352145946-gaqukku05b2eq193u706p9rctmlkih4n.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="used_goods_trading_shop_that_can_donate">Used goods trading shop that can donate</string>
    <string name="a_sale_can_soon_become_n_a_donation">A sale can soon become\n a donation.</string>
    <string name="choose_where_you_want_to_donate">Choose where you want to donate</string>
    <string name="as_much_as_you_want_out_of_the_n_sales_amount_to_the_selected_n_donation_destinationdonate">As much as you want out of the\n sales amount to the selected \n donation destinationDonate.</string>
    <string name="non_face_to_face_safe_transaction">Non-face-to-face safe transaction</string>
    <string name="nearby_areas_can_be_transacted_nthrough_nearby_convenience_n_storesthere_is">Nearby areas can be transacted\nthrough nearby convenience\n storesThere is.</string>
    <string name="have_an_account">Create your account\nAlready have an account?log in</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confrim_your_password">Confirm your password</string>
    <string name="i_agree_to_the_terms_of_use">I agree to the terms of use</string>
    <string name="create_an_account">Create an account</string>
    <string name="demo">Android is a Software stack</string>
    <string name="log_in_with_your_email">Log in with your email</string>
    <string name="youremail">Your Email</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="your_password">Your Password</string>
    <string name="login_to_my_account">Login to my Account</string>
    <string name="kakao">Kakao</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="don_t_have_an_account_signup">계정이 없으신가요? 가입하기</string>
    <string name="privacy_policy">By registering you agree to our terms and\n conditions as well as our privacy policy</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_email">Email to receive your password\nPlease enter your address.</string>
    <string name="submit">Submit</string>
    <string name="instructionVerifyOtp">Please enter your verification code.</string>
    <string name="confirmation_number">Confirm OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="sell">Sell</string>
    <string name="my_account">My Account</string>
    <string name="beomeo_dong">Beomeo-dong</string>
    <string name="search">Search</string>
    <string name="electronics">Electronics \n </string>
    <string name="_4_seater_sofa_for_sale">4 seater sofa for sale</string>
    <string name="sponsoring_holt_children_s_welfare_society">*Sponsoring Holt Children\'s Welfare Society</string>
    <string name="_16_min_ago">16 min ago</string>
    <string name="_200_000_won">200,000 won</string>
    <string name="full_donation">Full donation</string>
    <string name="trading">Trading</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="conditions">Conditions</string>
    <string name="distance">Distance</string>
    <string name="zero">0</string>
    <string name="cameraPermissionReason">Without this permission the app is unable to access device camera.We require this permission to capture photo using device camera. Are you sure you want to deny this permission?</string>
    <string name="galleryPermissionReason">Without this permission the app is unable to access device local storage.We require this permission to pick photo from gallery. Are you sure you want to deny this permission?</string>
    <string name="_10_miles">10 Miles</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="newest">Newest</string>
    <string name="nearest">Nearest</string>
    <string name="price_low_to_high">Price: Low to high</string>
    <string name="price_high_to_low">Price: High to low</string>
    <string name="hi">hi</string>
    <string name="selling">Selling</string>
    <string name="sold">Sold</string>
    <string name="favorites">Favorites</string>
    <string name="post_ad">Post Ad</string>
    <string name="category">Category</string>
    <string name="one">1</string>
    <string name="tip_add_at_least_3_photos">Tip:add at least 3 photos</string>
    <string name="_4_10photos">0/10Photos</string>
    <string name="description_of_field">Describe what you\'re selling in a few words</string>
    <string name="set_a_competitive_price">Set a competitive price</string>
    <string name="select_the_condition_that_fits_best">Select the condition that fits best</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="do_you_want_to_charity">Do you want to charity</string>
    <string name="select_the_foundation">Select the Foundation</string>
    <string name="i_agree_term_amp_condition"><![CDATA[I agree Term & Condition]]></string>
    <string name="women_s_clothing">Women\'s clothing</string>
    <string name="selling_samsung_galaxy_s10">Selling Samsung Galaxy S10.</string>
    <string name="_16_min">16 min</string>
    <string name="we_donate_5_of_the_product_amount_to_the_green_umbrella_foundation">We donate 5% of the product amount to the Green Umbrella Foundation</string>
    <string name="just_friend">Just Friends</string>
    <string name="beomeo_dong_dong_gu_daegu">Beomeo-dong,Dong-gu,Daegu</string>
    <string name="review_items">Review items</string>
    <string name="write_your_opinion">Write your opinion</string>
    <string name="write_a_review">Write a review</string>
    <string name="transaction_review">Transaction review</string>
    <string name="see_the_full_review">See the full review</string>
    <string name="share_items">Share items</string>
    <string name="buy">Buy</string>
    <string name="see_all_review">See all review</string>
    <string name="selling_samsung_galaxy_s10_n_evaluate_the_item">Selling Samsung Galaxy S10.</string>
    <string name="reviews_reveal_your_account_and_product_n_information">Reviews reveal your account and product information</string>
    <string name="please_tell_us_about_your_experience">Please tell us about your experience</string>
    <string name="_0_500">0/500</string>
    <string name="send">Send</string>
    <string name="device_selling">Selling Samsung Galaxy S10</string>
    <string name="profile">Profile</string>
    <string name="change_photo">Change photo</string>
    <string name="email">Email</string>
    <string name="notification">Notification</string>
    <string name="my_listings">My listings</string>
    <string name="change_password">Change Password</string>
    <string name="support">Support</string>
    <string name="help">Help</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="policy">Privacy Policy</string>
    <string name="log_out">Log out</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="verify_password">verify password</string>
    <string name="jonson_bride">Jonson Bride</string>
    <string name="joined_july_2021_mohali_punjab">joined July 2021-Mohali,Punjab</string>
    <string name="report">Report</string>
    <string name="block">Block</string>
    <string name="seller_listings">Seller Listings</string>
    <string name="title">Title</string>
    <string name="product_status">Product status</string>
    <string name="star">*</string>
    <string name="valid_time_10_minutes">Valid for 10 minutes</string>
    <string name="enter_the_charitable_amount">Enter the charitable amount</string>
    <string name="i_agree_terms_amp_condition"><![CDATA[I agree Terms & Condition]]></string>
    <string name="check_your_internet">Please Check your internet connection</string>
    <string name="safe_transaction">Safe transaction</string>
    <string name="courier_subtext">Until you receive the goods safety.\nJust Friends will keep you safe.</string>
    <string name="direct_trading">Direct Trading</string>
    <string name="you_can_easily_pay_for_direct_transactions_n_without_cash">You can easily pay for direct transactions\n without cash.</string>
    <string name="courier">Courier</string>
    <string name="card_accepted">card accepted</string>
    <string name="message_enter_name">Please enter your name</string>
    <string name="messgae_enter_email">Please enter email</string>
    <string name="message_password_length">Password should be greater than 8</string>
    <string name="message_enter_password">Please enter your password</string>
    <string name="message_enter_phone">Please enter your phone number</string>
    <string name="message_valid_phone">Please enter a valid phone number</string>
    <string name="cancel">Cancel</string>
    <string name="logout">LOGOUT</string>
    <string name="okay">Okay</string>
    <string name="mobile_details">DETAILS</string>
    <string name="description_caps">DESCRIPTION</string>
    <string name="seller">Seller</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="condition">Condition</string>
    <string name="price">Price</string>
    <string name="personal">Personal</string>
    <string name="account">Account</string>
    <string name="listings">Listings</string>
    <string name="dialog_filter" translatable="false">add_photo_dialog_fragment</string>
    <string name="dialog_sort" translatable="false">add_sort_dialog_fragment</string>
    <string name="j" translatable="false">j</string>
    <string name="please_choose_an_image">Please choose an image</string>
    <string name="permissions_denied">Permissions Denied</string>
    <string name="message_internet_connection">Please check your internet connection</string>
    <string name="error_from_server">Oops Something went wrong</string>
    <string name="message_check_internet">Please check your internet connection</string>
    <string name="permission_alert">Permission Alert</string>
    <string name="image_picker">Image Picker</string>
    <string name="album">Album</string>
    <string name="message_capture_photo">Could not found any application to capture Photo</string>
    <string name="package_name">com.justfriends.fileprovider</string>
    <string name="unable_to_detect_camera">Unable to detect camera</string>
    <string name="message_kakao_not_installed">Kakao Navi app is not installed. Recommend using navigation on web version of Kakao Navi.</string>
    <string name="report_user">Report User</string>
    <string name="inappropriate_profile_picture">Inappropriate profile picture</string>
    <string name="this_user_is_threatening_me">This user is threatening me</string>
    <string name="this_user_id_insulting_me">This user is insulting me</string>
    <string name="spam">Spam</string>
    <string name="fraud">Fraud</string>
    <string name="other">other</string>
    <string name="comment">Comment</string>
    <string name="confirm_email">Please Confirm Your Kakao Email or ID</string>
    <string name="confirm">Confirm</string>
</resources>