<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home_fragment"
        android:icon="@drawable/ic_home"
        android:title="@string/home"

        />

    <item
        android:id="@+id/nav_chat_fragment"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat"

        />
    <item
        android:id="@+id/nav_sell_fragment"
        android:icon="@drawable/ic_add"
        android:title="@string/sell"

        />
    <item
        android:id="@+id/nav_my_listings_fragment"
        android:icon="@drawable/ic_to_do_list"
        android:title="@string/listings" />
    <item
        android:id="@+id/nav_my_account_fragment"
        android:icon="@drawable/ic_user"
        android:title="@string/account" />

</menu>