<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    >


    <TextView
        android:id="@+id/tv_item_report_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/noto_sans_kr_medium"
        android:text="@string/report_user"
        android:textColor="@color/color_primary_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rg_report"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checkedButton="@id/rb_other"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_report_header">

        <RadioButton
            android:id="@+id/rb_inappropriate_profile_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:text="@string/inappropriate_profile_picture"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/color_primary_text"
            app:buttonTint="@color/color_primary" />

        <RadioButton
            android:id="@+id/rb_user_threatening_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:text="@string/this_user_is_threatening_me"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/color_primary_text"
            app:buttonTint="@color/color_primary" />

        <RadioButton
            android:id="@+id/rb_user_insulting_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:text="@string/this_user_id_insulting_me"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/color_primary_text"
            app:buttonTint="@color/color_primary" />

        <RadioButton
            android:id="@+id/rb_spam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:text="@string/spam"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/color_primary_text"
            app:buttonTint="@color/color_primary" />

        <RadioButton
            android:id="@+id/rb_fraud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:text="@string/fraud"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/color_primary_text"
            app:buttonTint="@color/color_primary" />

        <RadioButton
            android:id="@+id/rb_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/noto_sans_kr_regular"
            android:text="@string/other"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
            android:textColor="@color/color_primary_text"
            app:buttonTint="@color/color_primary" />
    </RadioGroup>

    <EditText
        android:id="@+id/et_comments"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/bg_outline_et"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:gravity="start"
        android:hint="@string/comment"
        android:includeFontPadding="false"
        android:inputType="text"
        android:padding="8dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/color_primary_text"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/rg_report" />


    <Button
        android:id="@+id/bt_cancel"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/noto_sans_kr_medium"
        android:text="@string/cancel"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/color_primary"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_send"
        app:layout_constraintStart_toStartOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/et_comments"
        app:shapeAppearance="@style/ShapeAppearance.App.SmallComponents_round_12"
        app:strokeColor="@color/color_primary"
        app:strokeWidth="1dp" />

    <Button
        android:id="@+id/bt_send"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/noto_sans_kr_medium"
        android:text="@string/report"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintStart_toEndOf="@+id/bt_cancel"
        app:layout_constraintTop_toTopOf="@+id/bt_cancel"
        app:shapeAppearance="@style/ShapeAppearance.App.SmallComponents_round_12" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:indeterminateTint="@color/color_primary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />
</androidx.constraintlayout.widget.ConstraintLayout>