<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/iv_post"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_home_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_fav"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_like_normal"
        app:layout_constraintEnd_toEndOf="@id/iv_post"
        app:layout_constraintTop_toTopOf="@id/iv_post" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:includeFontPadding="false"
        android:text="@string/_4_seater_sofa_for_sale"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textColor="@color/color_primary_text"
        app:layout_constraintEnd_toStartOf="@id/tv_user_review"
        app:layout_constraintStart_toStartOf="@id/iv_post"
        app:layout_constraintTop_toBottomOf="@id/iv_post" />

    <TextView
        android:id="@+id/tv_user_review"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/noto_sans_kr_medium"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text="@string/sponsoring_holt_children_s_welfare_society"
        android:textColor="@color/color_dark_red"
        android:textSize="8sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_name" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:gravity="left"
        android:includeFontPadding="false"
        android:text="@string/_16_min_ago"
        android:textColor="@color/color_primary_text"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <TextView
        android:id="@+id/tv_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sans_kr_black"
        android:includeFontPadding="false"
        android:text="@string/_200_000_won"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/color_primary_text"
        app:layout_constraintStart_toStartOf="@id/tv_time"
        app:layout_constraintTop_toBottomOf="@id/tv_time" />

    <TextView
        android:id="@+id/tv_donation"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/noto_sans_kr_regular"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:text="@string/full_donation"
        android:textColor="@color/color_primary_light"
        android:textSize="9sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_product_price"
        app:layout_constraintStart_toEndOf="@id/tv_product_price" />


    <TextView
        android:id="@+id/tv_trading"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_text_view"
        android:fontFamily="@font/noto_sans_kr_bold"
        android:gravity="center"
        android:paddingTop="0dp"
        android:paddingBottom="0dp"
        android:text="@string/trading"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textColor="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_product_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_product_price" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/color_text_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_product_price" />


</androidx.constraintlayout.widget.ConstraintLayout>